package ar.edu.utn.frba.dds.Model.UsuariosComunidad;

import ar.edu.utn.frba.dds.Model.GeoRefNormalizacion.Ubicacion;

public interface ServicioUbicacionGps {

  Ubicacion obtenerUbicacion();

}
